# agentic-app-quickstart

./: .gitignore  pyproject.toml
agentic_app_quickstart/examples/: helpers.py
agentic_app_quickstart/week_1/solution/: agent.py  hooks.py  main.py  main_gradio.py  telemetry.py  tools.py
agentic_app_quickstart/week_2/solution/: main.py  summary.py
agentic_app_quickstart/week_2/solution/monitoring/: evaluators.py  metrics.py  summary.py
